# YOLO-CPP

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  pyproject.toml  vcpkg.json
.github/workflows/: ci.yml
docs/: README.md  api_overview.md  build_notes.md  detection_guide.md  get_started.md  ort_static_vs_shared_plan.md  vcpkg_overlay_onnx_fix.md
examples/: CMakeLists.txt  README.md  classify_image.cpp  detect_image.cpp  example_image.hpp
examples/opencv_viz/: detect_image.cpp  pose_image.cpp
examples/ppm_loader/: classify_image.cpp  detect_image.cpp  image_ppm.hpp
examples/support/: cli.hpp  coco_labels.hpp  opencv_io.hpp  opencv_overlay.hpp
include/yolo/: facade.hpp  version.hpp  yolos.hpp
include/yolo/adapters/: ultralytics.hpp
include/yolo/core/: error.hpp  image.hpp  model_spec.hpp  result.hpp  session_options.hpp  tensor.hpp  types.hpp
include/yolo/detail/: classification_resize.hpp  classification_runtime.hpp  detection_runtime.hpp  engine.hpp  image_preprocess.hpp  obb_runtime.hpp  onnx_session.hpp  pipeline_info_utils.hpp  pose_runtime.hpp  segmentation_runtime.hpp  task_factory.hpp  task_runtime_utils.hpp  tensor_utils.hpp  ultralytics_adapter.hpp
include/yolo/tasks/: classification.hpp  detection.hpp  obb.hpp  pose.hpp  segmentation.hpp
src/adapters/: ultralytics_classify.cpp  ultralytics_detect.cpp  ultralytics_obb.cpp  ultralytics_pose.cpp  ultralytics_seg.cpp
src/core/: classification_resize.cpp  engine.cpp  error.cpp  facade.cpp  image_preprocess.cpp  onnx_session.cpp  pipeline_info_utils.cpp  task_runtime_utils.cpp  tensor_utils.cpp
src/tasks/: classification.cpp  detection.cpp  detection_decode.cpp  detection_postprocess.cpp  obb.cpp  pose.cpp  segmentation.cpp
tests/: CMakeLists.txt  README.md  __init__.py  test_utils.hpp
tests/adapter/: test_task_hard_constraint.cpp  test_ultralytics_classify_probe.cpp  test_ultralytics_detect_probe.cpp  test_ultralytics_obb_binding_contract.cpp  test_ultralytics_pose_binding_contract.cpp  test_ultralytics_seg_binding_contract.cpp
tests/component/: test_classification_decode.cpp  test_classification_resize_numerics.cpp  test_classification_resize_reference.cpp  test_detection_decode.cpp  test_detection_decode_layouts.cpp  test_detection_decode_validation.cpp  test_detection_postprocess.cpp  test_detection_postprocess_filtering.cpp  test_detection_postprocess_nms.cpp  test_detection_postprocess_restore.cpp  test_obb_decode_contract.cpp  test_pose_decode_contract.cpp  test_segmentation_decode_contract.cpp  test_segmentation_mask_projection.cpp
tests/integration/: test_classify_pipeline.cpp  test_detect_pipeline.cpp  test_obb_pipeline.cpp  test_pose_pipeline.cpp  test_run_raw_guards.cpp  test_segment_pipeline.cpp
tests/parity/: README.md  __init__.py  _parity_utils.py  _shared.py  run_obb_debug.py  run_parity.py  run_pose_debug.py  run_segmentation_debug.py  test_classification_parity.py  test_detection_parity.py  test_obb_parity.py  test_pose_parity.py  test_segmentation_parity.py
tests/unit/: test_classification_center_crop_geometry.cpp  test_classification_preprocess_contract.cpp  test_classification_resize_geometry.cpp  test_classification_semantics.cpp  test_image_preprocess.cpp  test_pipeline_info.cpp  test_task_common_input_selection.cpp  test_task_common_metadata.cpp  test_task_common_provider.cpp  test_task_common_shape_validation.cpp  test_tensor_utils.cpp
tools/: CMakeLists.txt  README.md  onnx_session_probe.cpp  ort_session_probe.cpp  yolo_cpp_parity_dump.cpp  yolo_cpp_segmentation_debug_dump.cpp
tools/debug/: yolo_cpp_obb_debug_dump.cpp  yolo_cpp_pose_debug_dump.cpp  yolo_cpp_segmentation_debug_dump.cpp
tools/dev/: ort_session_probe.cpp
tools/dev/ort_link_probe/: main.cpp
tools/ort_link_probe/: CMakeLists.txt
tools/parity/: yolo_cpp_parity_dump.cpp
vcpkg-overlay-ports/onnx/: disable-static-registration-debug-assert.patch  portfile.cmake
