[project]
name = "yolo-cpp-test"
version = "0.1.1"
description = "Python-only test dependencies for the YOLO-CPP workspace."
readme = "README.md"
requires-python = ">=3.11"


[tool.uv]
package = false

[dependency-groups]
test = [
    "numpy>=2.4.3",
    "onnx>=1.20.1",
    "onnxruntime>=1.24.3",
    "pillow>=12.1.1",
    "ultralytics>=8.4.21",
]
